# vroom

./: .clang-format  .gitignore  CMakeLists-ExternalProjects.txt  CMakeLists.txt  qtcreator-code-style.xml
cmake/: FindDebArch.cmake  pkgconfig.in
libvroom_examples/: libvroom.cpp
src/: main.cpp
src/algorithms/: kruskal.cpp  kruskal.h  munkres.cpp  munkres.h
src/algorithms/heuristics/: clustering.cpp  clustering.h  solomon.cpp  solomon.h
src/algorithms/local_search/: local_search.cpp  local_search.h  operator.cpp  operator.h
src/problems/: vrp.cpp  vrp.h
src/problems/cvrp/: cvrp.cpp  cvrp.h
src/problems/cvrp/operators/: cross_exchange.cpp  cross_exchange.h  exchange.cpp  exchange.h  intra_cross_exchange.cpp  intra_cross_exchange.h  intra_exchange.cpp  intra_exchange.h  intra_mixed_exchange.cpp  intra_mixed_exchange.h  intra_or_opt.cpp  intra_or_opt.h  intra_relocate.cpp  intra_relocate.h  mixed_exchange.cpp  mixed_exchange.h  or_opt.cpp  or_opt.h  relocate.cpp  relocate.h  reverse_two_opt.cpp  reverse_two_opt.h  two_opt.cpp  two_opt.h
src/problems/tsp/: tsp.cpp  tsp.h
src/problems/tsp/heuristics/: christofides.cpp  christofides.h  local_search.cpp  local_search.h
src/problems/vrptw/: vrptw.cpp  vrptw.h
src/problems/vrptw/operators/: cross_exchange.cpp  cross_exchange.h  exchange.cpp  exchange.h  intra_cross_exchange.cpp  intra_cross_exchange.h  intra_exchange.cpp  intra_exchange.h  intra_mixed_exchange.cpp  intra_mixed_exchange.h  intra_or_opt.cpp  intra_or_opt.h  intra_relocate.cpp  intra_relocate.h  mixed_exchange.cpp  mixed_exchange.h  or_opt.cpp  or_opt.h  relocate.cpp  relocate.h  reverse_two_opt.cpp  reverse_two_opt.h  two_opt.cpp  two_opt.h
src/routing/: libosrm_wrapper.cpp  libosrm_wrapper.h  orshttp_wrapper.cpp  orshttp_wrapper.h  osrm_wrapper.h  routed_wrapper.cpp  routed_wrapper.h  wrapper.h
src/structures/: cl_args.cpp  cl_args.h  typedefs.h
src/structures/generic/: edge.cpp  edge.h  matrix.cpp  matrix.h  undirected_graph.cpp  undirected_graph.h
src/structures/vroom/: amount.h  job.cpp  job.h  location.cpp  location.h  raw_route.h  solution_state.cpp  solution_state.h  time_window.cpp  time_window.h  tw_route.cpp  tw_route.h  vehicle.cpp  vehicle.h
src/structures/vroom/input/: input.cpp  input.h
src/structures/vroom/solution/: computing_times.cpp  computing_times.h  route.cpp  route.h  solution.cpp  solution.h  step.cpp  step.h  summary.cpp  summary.h
src/utils/: exception.cpp  exception.h  helpers.h  input_parser.cpp  input_parser.h  output_json.cpp  output_json.h  version.cpp  version.h
